--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,6 +55,7 @@ ul {
     background: #FFFFFF6B;
     backdrop-filter: blur(4px);
     z-index: 1000;
+    
 
 }
 
@@ -62,6 +63,14 @@ ul {
     background: #ffffff !important;
     animation: headerIN 0.3s ease-in-out;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid  #D1D1D6;
+
+}
+.lookbookheader {
+    background: #ffffff !important;
+    animation: headerIN 0.3s ease-in-out;
+    box-shadow: none;
+    border-bottom: 1px solid  #D1D1D6;
 
 }
 
@@ -84,6 +93,18 @@ ul {
 }
 
 .sticky .menubarbtn path {
+    stroke: #2D1817 !important;
+}
+
+.lookbookheader .navlink {
+    color: #2D1817 !important;
+}
+
+.lookbookheader .signInBtn {
+    color: #2D1817 !important;
+}
+
+.lookbookheader .menubarbtn path {
     stroke: #2D1817 !important;
 }
 
@@ -123,7 +144,13 @@ ul {
 }
 
 .navlink:hover {
-    color: rgb(165, 165, 245);
+    color: rgb(3, 3, 88);
+}
+.lookbookheader .navlink:hover {
+    color: rgb(3, 3, 88) !important;
+}
+.footerLinks a:hover {
+    color: rgb(3, 3, 88) !important;
 }
 
 .signInBtn {
@@ -154,6 +181,13 @@ ul {
 .sticky .signInBtn .icon_w {
     display: none !important;
 }
+.lookbookheader .signInBtn .icon_b {
+    display: block !important;
+}
+
+.lookbookheader .signInBtn .icon_w {
+    display: none !important;
+}
 
 .menubarbtn {
     height: 40px;
@@ -166,6 +200,9 @@ ul {
 
 .contact_hero_section {
     background: url(../images/contactUshero_bg.png) no-repeat 0 0 / 100% 100%;
+}
+.tradeshow_hero_section {
+    background: url(../images/tradeshowherobg.png) no-repeat 0 0 / 100% 100%;
 }
 
 .separatorBorder {
@@ -240,4 +277,18 @@ ul {
     }
 
 
+}
+
+/* look book */
+.lookbookherotitle{
+    font-size: 80px;
+}
+.borderline{
+    border-bottom: 1.2px solid  #AEAEB2;
+    padding-top: 22px;
+}
+@media (max-width: 768px) {
+    .lookbookherotitle{
+    font-size: 50px;
+}
 }
