--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -474,6 +474,60 @@ ul {
     transform: rotate(45deg);
 }
 
+.termsconditionlistbutton {
+    list-style-type: decimal;
+}
+
+.termsconditionlistbutton li {
+    margin-bottom: 10px;
+}
+
+.termsconditionlistbutton li a {
+    font-family: Lato;
+    font-weight: 400;
+    font-style: Regular;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0px;
+    color: #000000;
+}
+
+.eligibilitylist {
+    list-style-type: disc;
+}
+
+.eligibilitylist li {
+    font-family: Lato;
+    font-weight: 400;
+    font-style: Regular;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0px;
+    color: #000000;
+    margin-bottom: 5px;
+}
+
+.contactinformationarea {
+    background: #F7F7F7;
+    padding: 15px 10px 15px 0;
+}
+
+.contactinformationarea ul li {
+    font-family: Lato;
+    font-weight: 400;
+    font-style: Regular;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0px;
+    color: #000000;
+
+}
+.termsconditionlistcard{
+    position: sticky;
+    top: 150px;
+}
+
+
 @media (max-width: 768px) {
     .lookbookherotitle {
         font-size: 50px;
@@ -481,5 +535,17 @@ ul {
 
     .subscribearea button {
         width: 100px;
+    }
+}
+
+@media (max-width: 440px) {
+    .contactinformationarea ul li {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 360px) {
+    .contactinformationarea ul li {
+        font-size: 12px;
     }
 }
